fix attribution mobile display

--- a/style.css
+++ b/style.css
@@ -58,6 +58,12 @@
         
     }
     
+    .attribution {
+        position:absolute;
+        bottom: 0;
+        width: 100%;
+        padding: 5px 0 5px 0;
+    }
     
 
 }
@@ -104,17 +110,29 @@
         padding: 125px;
         transform: translate(0, -305px);
     }
+
+    .attribution {
+        position: absolute;
+        bottom: 0;
+        width: 100%;
+        padding: 10px 0 10px 0;
+    }
 }
 
 body {
     background-color: hsl(217, 54%, 11%);
-    display: flex;
-    justify-content: center;
-    align-items: center;
     height: 100vh;
     color: #fff;
     font-family: 'Outfit', sans-serif;
+    
+}
+
+.flexContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     flex-direction: column;
+    height: 100vh;
 }
 
 
@@ -235,10 +253,7 @@ body {
 /* *****FOOTER***** */
 .attribution { 
     font-size: 11px; text-align: center; 
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    padding: 10px 0 10px;
+    
 }
 
 .attribution a { 
